amend path errors

--- a/cluster_analysis.ipynb
+++ b/cluster_analysis.ipynb
@@ -1759,12 +1759,12 @@
         "import umap\n",
         "\n",
         "# --- load features (scaled) ---\n",
-        "X = pd.read_parquet(\"data-draft/feature_table_extended_scaled.parquet\")\n",
+        "X = pd.read_parquet(out_dir / \"feature_table_extended_scaled.parquet\")\n",
         "\n",
         "# --- load labels ---\n",
-        "labels = pd.read_parquet(\"data-draft/clusters_3models.parquet\")\n",
+        "labels = pd.read_parquet(out_dir / \"clusters_3models.parquet\")\n",
         "if \"cluster_kmeans\" not in labels.columns:\n",
-        "    labels = pd.read_parquet(\"data-draft/clusters_gmm_kmeans.parquet\")\n",
+        "    labels = pd.read_parquet(out_dir / \"clusters_gmm_kmeans.parquet\")\n",
         "\n",
         "df = X.join(labels[[\"cluster_kmeans\"]])\n",
         "\n",
@@ -2717,8 +2717,8 @@
         "import plotly.express as px\n",
         "\n",
         "# load features + labels\n",
-        "X = pd.read_parquet(\"data-draft/feature_table_extended_scaled.parquet\")\n",
-        "labels = pd.read_parquet(\"data-draft/clusters_3models.parquet\")\n",
+        "X = pd.read_parquet(out_dir / \"feature_table_extended_scaled.parquet\")\n",
+        "labels = pd.read_parquet(out_dir / \"clusters_3models.parquet\")\n",
         "df = X.join(labels[[\"cluster_kmeans\"]])\n",
         "\n",
         "# 3D UMAP embedding\n",
