add feature explainations

--- a/cluster_analysis.ipynb
+++ b/cluster_analysis.ipynb
@@ -415,6 +415,149 @@
     },
     {
       "cell_type": "markdown",
+      "id": "97705bbf",
+      "metadata": {},
+      "source": [
+        "# Feature Definitions (Time‑Series Clustering)\n",
+        "\n",
+        "## **A) Core Features (always computed)**\n",
+        "\n",
+        "**Demand sparsity / intermittency**\n",
+        "- **`nonzero_rate`**:  \n",
+        "  Fraction of days with non‑zero sales.  \n",
+        "  \\[\n",
+        "  \\text{nonzero\\_rate} = \\frac{\\#\\{y_t \\neq 0\\}}{T}\n",
+        "  \\]\n",
+        "- **`avg_gap`**:  \n",
+        "  Mean gap (in days) between consecutive non‑zero sales days.  \n",
+        "  \\[\n",
+        "  \\text{avg\\_gap} = \\frac{1}{(n_{nz}-1)}\\sum_{i=2}^{n_{nz}} (t_i - t_{i-1})\n",
+        "  \\]\n",
+        "- **`longest_zero_streak`**:  \n",
+        "  Maximum run length of consecutive zero‑sales days.\n",
+        "\n",
+        "**Autocorrelation / seasonality**\n",
+        "- **`acf_1`, `acf_7`, `acf_14`, `acf_30`**:  \n",
+        "  Autocorrelation at lag 1/7/14/30:\n",
+        "  \\[\n",
+        "  \\rho_k = \\frac{\\sum_t (y_t-\\bar y)(y_{t-k}-\\bar y)}{\\sum_t (y_t-\\bar y)^2}\n",
+        "  \\]\n",
+        "- **`pacf_1`, `pacf_7`, `pacf_14`**:  \n",
+        "  Partial autocorrelation at lag 1/7/14 (Yule‑Walker / YWM).\n",
+        "- **`stl_seasonality_strength`**:  \n",
+        "  STL seasonal strength (weekly period).  \n",
+        "  \\[\n",
+        "  S = 1 - \\frac{\\mathrm{Var}(\\text{resid})}{\\mathrm{Var}(\\text{resid}+\\text{seasonal})}\n",
+        "  \\]\n",
+        "\n",
+        "**Volatility / stability**\n",
+        "- **`cv`** (coefficient of variation):  \n",
+        "  \\[\n",
+        "  \\text{cv} = \\frac{\\sigma_y}{\\mu_y}\n",
+        "  \\]\n",
+        "- **`rolling_std_mean_ratio`**:  \n",
+        "  Mean of rolling 7‑day \\(\\frac{\\sigma}{\\mu}\\) ratio.\n",
+        "\n",
+        "**Trend**\n",
+        "- **`trend_slope`**:  \n",
+        "  Slope from a linear fit on 7‑day rolling mean.  \n",
+        "  \\[\n",
+        "  \\hat{y}_t = a + bt \\Rightarrow \\text{slope}=b\n",
+        "  \\]\n",
+        "- **`net_growth`**:  \n",
+        "  Last minus first value of the rolling mean.\n",
+        "\n",
+        "**Burst / peaks**\n",
+        "- **`peak_days`**:  \n",
+        "  Count of days with sales ≥ 95th percentile of positive sales.\n",
+        "- **`peak_size`**:  \n",
+        "  95th percentile of positive sales.\n",
+        "\n",
+        "**Level / value**\n",
+        "- **`mean_daily_sales`**:  \n",
+        "  Mean daily sales amount.\n",
+        "- **`total_sales`**:  \n",
+        "  Sum of sales across all days.\n",
+        "\n",
+        "**Returns**\n",
+        "- **`neg_day_rate`**:  \n",
+        "  Fraction of days with negative sales (returns).  \n",
+        "  \\[\n",
+        "  \\text{neg\\_day\\_rate} = \\frac{\\#\\{y_t < 0\\}}{T}\n",
+        "  \\]\n",
+        "\n",
+        "**Spectral features**\n",
+        "- **`dominant_period`**:  \n",
+        "  Period (in days) from the strongest FFT frequency.\n",
+        "- **`spectral_entropy`**:  \n",
+        "  Normalized entropy of FFT power spectrum.  \n",
+        "  \\[\n",
+        "  H = -\\frac{\\sum p_i \\log p_i}{\\log N}\n",
+        "  \\]\n",
+        "\n",
+        "**Stationarity**\n",
+        "- **`adf_pvalue`**:  \n",
+        "  p‑value from Augmented Dickey‑Fuller (unit root test).\n",
+        "- **`kpss_pvalue`**:  \n",
+        "  p‑value from KPSS stationarity test.\n",
+        "\n",
+        "**Intermittency (Croston diagnostics)**\n",
+        "- **`adi`** (Average Demand Interval):  \n",
+        "  Mean interval between non‑zero sales.\n",
+        "- **`cv2`** (Squared coefficient of variation of non‑zero demand):  \n",
+        "  \\[\n",
+        "  \\text{cv2} = \\left(\\frac{\\sigma_{demand}}{\\mu_{demand}}\\right)^2\n",
+        "  \\]\n",
+        "\n",
+        "**Croston / TSB‑style summary**\n",
+        "- **`croston_mean_demand`**: mean of non‑zero demand sizes.  \n",
+        "- **`croston_mean_interval`**: mean interval between demands.  \n",
+        "- **`croston_forecast`**:  \n",
+        "  \\[\n",
+        "  \\hat{y} = \\frac{\\text{mean demand}}{\\text{mean interval}}\n",
+        "  \\]\n",
+        "- **`tsb_p`**: demand occurrence probability \\((\\#\\text{nonzero})/T\\)  \n",
+        "- **`tsb_z`**: mean demand size  \n",
+        "- **`tsb_forecast`**:  \n",
+        "  \\[\n",
+        "  \\hat{y} = \\text{tsb\\_p} \\times \\text{tsb\\_z}\n",
+        "  \\]\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## **B) Optional Model‑Based Features (USE_MODEL_BASED=True)**\n",
+        "\n",
+        "**AR(1)**\n",
+        "- **`ar1_phi`**: AR(1) coefficient from AutoReg(1).  \n",
+        "- **`ar1_resid_var`**: variance of AR(1) residuals.\n",
+        "\n",
+        "**SES (Simple Exponential Smoothing)**\n",
+        "- **`ses_alpha`**: smoothing parameter.  \n",
+        "- **`ses_sse`**: sum of squared errors.\n",
+        "\n",
+        "**ARIMA(1,0,1)**\n",
+        "- **`arima_ar1`**: AR(1) parameter  \n",
+        "- **`arima_ma1`**: MA(1) parameter  \n",
+        "- **`arima_sigma2`**: innovation variance  \n",
+        "- **`arima_aic`**: AIC for model fit\n",
+        "\n",
+        "**ETS (Additive Trend + Additive Seasonality)**\n",
+        "- **`ets_alpha`**: level smoothing  \n",
+        "- **`ets_beta`**: trend smoothing  \n",
+        "- **`ets_gamma`**: seasonal smoothing  \n",
+        "- **`ets_sse`**: sum of squared errors  \n",
+        "- **`ets_resid_var`**: residual variance\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## **Notes for Reporting**\n",
+        "- **Median** profiles are used for cluster interpretation (robust to outliers).\n",
+        "- **Mean–median shift** is reported separately to quantify outlier influence.\n",
+        "- Model‑based features are **optional** and may be disabled for speed or stability."
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {},
       "source": [
         "## Feature extraction (including model-based features)"
