--- a/cluster_analysis.ipynb
+++ b/cluster_analysis.ipynb
@@ -425,45 +425,45 @@
         "**Demand sparsity / intermittency**\n",
         "- **`nonzero_rate`**:  \n",
         "  Fraction of days with non‑zero sales.  \n",
-        "  \\[\n",
+        "  $$\n",
         "  \\text{nonzero\\_rate} = \\frac{\\#\\{y_t \\neq 0\\}}{T}\n",
-        "  \\]\n",
+        "  $$\n",
         "- **`avg_gap`**:  \n",
         "  Mean gap (in days) between consecutive non‑zero sales days.  \n",
-        "  \\[\n",
+        "  $$\n",
         "  \\text{avg\\_gap} = \\frac{1}{(n_{nz}-1)}\\sum_{i=2}^{n_{nz}} (t_i - t_{i-1})\n",
-        "  \\]\n",
+        "  $$\n",
         "- **`longest_zero_streak`**:  \n",
         "  Maximum run length of consecutive zero‑sales days.\n",
         "\n",
         "**Autocorrelation / seasonality**\n",
         "- **`acf_1`, `acf_7`, `acf_14`, `acf_30`**:  \n",
         "  Autocorrelation at lag 1/7/14/30:\n",
-        "  \\[\n",
+        "  $$\n",
         "  \\rho_k = \\frac{\\sum_t (y_t-\\bar y)(y_{t-k}-\\bar y)}{\\sum_t (y_t-\\bar y)^2}\n",
-        "  \\]\n",
+        "  $$\n",
         "- **`pacf_1`, `pacf_7`, `pacf_14`**:  \n",
         "  Partial autocorrelation at lag 1/7/14 (Yule‑Walker / YWM).\n",
         "- **`stl_seasonality_strength`**:  \n",
         "  STL seasonal strength (weekly period).  \n",
-        "  \\[\n",
+        "  $$\n",
         "  S = 1 - \\frac{\\mathrm{Var}(\\text{resid})}{\\mathrm{Var}(\\text{resid}+\\text{seasonal})}\n",
-        "  \\]\n",
+        "  $$\n",
         "\n",
         "**Volatility / stability**\n",
         "- **`cv`** (coefficient of variation):  \n",
-        "  \\[\n",
+        "  $$\n",
         "  \\text{cv} = \\frac{\\sigma_y}{\\mu_y}\n",
-        "  \\]\n",
+        "  $$\n",
         "- **`rolling_std_mean_ratio`**:  \n",
         "  Mean of rolling 7‑day \\(\\frac{\\sigma}{\\mu}\\) ratio.\n",
         "\n",
         "**Trend**\n",
         "- **`trend_slope`**:  \n",
         "  Slope from a linear fit on 7‑day rolling mean.  \n",
-        "  \\[\n",
+        "  $$\n",
         "  \\hat{y}_t = a + bt \\Rightarrow \\text{slope}=b\n",
-        "  \\]\n",
+        "  $$\n",
         "- **`net_growth`**:  \n",
         "  Last minus first value of the rolling mean.\n",
         "\n",
@@ -482,18 +482,18 @@
         "**Returns**\n",
         "- **`neg_day_rate`**:  \n",
         "  Fraction of days with negative sales (returns).  \n",
-        "  \\[\n",
+        "  $$\n",
         "  \\text{neg\\_day\\_rate} = \\frac{\\#\\{y_t < 0\\}}{T}\n",
-        "  \\]\n",
+        "  $$\n",
         "\n",
         "**Spectral features**\n",
         "- **`dominant_period`**:  \n",
         "  Period (in days) from the strongest FFT frequency.\n",
         "- **`spectral_entropy`**:  \n",
         "  Normalized entropy of FFT power spectrum.  \n",
-        "  \\[\n",
+        "  $$\n",
         "  H = -\\frac{\\sum p_i \\log p_i}{\\log N}\n",
-        "  \\]\n",
+        "  $$\n",
         "\n",
         "**Stationarity**\n",
         "- **`adf_pvalue`**:  \n",
@@ -505,50 +505,92 @@
         "- **`adi`** (Average Demand Interval):  \n",
         "  Mean interval between non‑zero sales.\n",
         "- **`cv2`** (Squared coefficient of variation of non‑zero demand):  \n",
-        "  \\[\n",
+        "  $$\n",
         "  \\text{cv2} = \\left(\\frac{\\sigma_{demand}}{\\mu_{demand}}\\right)^2\n",
-        "  \\]\n",
+        "  $$\n",
         "\n",
         "**Croston / TSB‑style summary**\n",
         "- **`croston_mean_demand`**: mean of non‑zero demand sizes.  \n",
         "- **`croston_mean_interval`**: mean interval between demands.  \n",
         "- **`croston_forecast`**:  \n",
-        "  \\[\n",
+        "  $$\n",
         "  \\hat{y} = \\frac{\\text{mean demand}}{\\text{mean interval}}\n",
-        "  \\]\n",
+        "  $$\n",
         "- **`tsb_p`**: demand occurrence probability \\((\\#\\text{nonzero})/T\\)  \n",
         "- **`tsb_z`**: mean demand size  \n",
         "- **`tsb_forecast`**:  \n",
-        "  \\[\n",
+        "  $$\n",
         "  \\hat{y} = \\text{tsb\\_p} \\times \\text{tsb\\_z}\n",
-        "  \\]\n",
+        "  $$\n",
         "\n",
         "---\n",
         "\n",
         "## **B) Optional Model‑Based Features (USE_MODEL_BASED=True)**\n",
         "\n",
+        "Below is **Part B (Model‑Based Features)** rewritten with formulas.\n",
+        "\n",
+        "\n",
         "**AR(1)**\n",
-        "- **`ar1_phi`**: AR(1) coefficient from AutoReg(1).  \n",
-        "- **`ar1_resid_var`**: variance of AR(1) residuals.\n",
+        "Model:\n",
+        "$$\n",
+        "y_t = \\phi\\,y_{t-1} + \\varepsilon_t\n",
+        "$$\n",
+        "- **`ar1_phi`**: estimated \\(\\phi\\)  \n",
+        "- **`ar1_resid_var`**:  \n",
+        "$$\n",
+        "\\hat{\\sigma}^2 = \\mathrm{Var}(\\hat{\\varepsilon}_t)\n",
+        "$$\n",
+        "\n",
         "\n",
         "**SES (Simple Exponential Smoothing)**\n",
-        "- **`ses_alpha`**: smoothing parameter.  \n",
-        "- **`ses_sse`**: sum of squared errors.\n",
+        "Model:\n",
+        "$$\n",
+        "\\hat{y}_{t|t-1} = \\ell_{t-1}\n",
+        "\\quad,\\quad\n",
+        "\\ell_t = \\alpha y_t + (1-\\alpha)\\ell_{t-1}\n",
+        "$$\n",
+        "- **`ses_alpha`**: smoothing parameter \\(\\alpha\\)  \n",
+        "- **`ses_sse`**:  \n",
+        "$$\n",
+        "\\text{SSE} = \\sum_t (y_t - \\hat{y}_{t|t-1})^2\n",
+        "$$\n",
+        "\n",
         "\n",
         "**ARIMA(1,0,1)**\n",
-        "- **`arima_ar1`**: AR(1) parameter  \n",
-        "- **`arima_ma1`**: MA(1) parameter  \n",
-        "- **`arima_sigma2`**: innovation variance  \n",
-        "- **`arima_aic`**: AIC for model fit\n",
+        "Model:\n",
+        "$$\n",
+        "y_t = \\phi y_{t-1} + \\varepsilon_t + \\theta \\varepsilon_{t-1}\n",
+        "$$\n",
+        "- **`arima_ar1`**: \\(\\phi\\)  \n",
+        "- **`arima_ma1`**: \\(\\theta\\)  \n",
+        "- **`arima_sigma2`**: \\(\\sigma^2\\) (innovation variance)  \n",
+        "- **`arima_aic`**:  \n",
+        "$$\n",
+        "\\text{AIC} = 2k - 2\\ln(\\hat{L})\n",
+        "$$\n",
         "\n",
-        "**ETS (Additive Trend + Additive Seasonality)**\n",
-        "- **`ets_alpha`**: level smoothing  \n",
-        "- **`ets_beta`**: trend smoothing  \n",
-        "- **`ets_gamma`**: seasonal smoothing  \n",
-        "- **`ets_sse`**: sum of squared errors  \n",
-        "- **`ets_resid_var`**: residual variance\n",
         "\n",
-        "---\n",
+        " **ETS (Additive Trend + Additive Seasonality)**\n",
+        "Additive Holt‑Winters (period = \\(m\\)):\n",
+        "$$\n",
+        "\\begin{aligned}\n",
+        "\\ell_t &= \\alpha (y_t - s_{t-m}) + (1-\\alpha)(\\ell_{t-1}+b_{t-1}) \\\\\\\\\n",
+        "b_t &= \\beta (\\ell_t - \\ell_{t-1}) + (1-\\beta)b_{t-1} \\\\\\\\\n",
+        "s_t &= \\gamma (y_t - \\ell_t) + (1-\\gamma)s_{t-m} \\\\\\\\\n",
+        "\\hat{y}_{t+h} &= \\ell_t + h b_t + s_{t-m+h}\n",
+        "\\end{aligned}\n",
+        "$$\n",
+        "- **`ets_alpha`**: \\(\\alpha\\) (level smoothing)  \n",
+        "- **`ets_beta`**: \\(\\beta\\) (trend smoothing)  \n",
+        "- **`ets_gamma`**: \\(\\gamma\\) (seasonal smoothing)  \n",
+        "- **`ets_sse`**:  \n",
+        "$$\n",
+        "\\text{SSE} = \\sum_t (y_t - \\hat{y}_t)^2\n",
+        "$$\n",
+        "- **`ets_resid_var`**:  \n",
+        "$$\n",
+        "\\mathrm{Var}(y_t - \\hat{y}_t)\n",
+        "$$\n",
         "\n",
         "## **Notes for Reporting**\n",
         "- **Median** profiles are used for cluster interpretation (robust to outliers).\n",
